--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "build/index.js",
   "types": "types/index.d.ts",
-  "private": true,
+  "private": false,
   "repository": "git@github.com:SoftwareBrothers/admin-bro-koa.git",
   "license": "MIT",
   "scripts": {
