--- a/example-app/package.json
+++ b/example-app/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "scripts": {
     "build": "tsc",
-    "start": "yarn build && node build/index.js",
+    "start": "yarn build && node build/src/index.js",
     "start:dev": "concurrently \"yarn build --watch\" \"nodemon --ext '.js' --watch ../build --watch ./build --ignore 'cypress/**/*.js' node build/src/index.js\"",
     "start:debug": "DEBUG=koa* yarn start:dev",
     "cypress:open": "cypress open",
@@ -20,9 +20,12 @@
     "typescript": "^3.9.7"
   },
   "dependencies": {
-    "admin-bro": "^3.0.0-beta.7",
-    "admin-bro-mongoose": "^0.5.2",
+    "admin-bro": ">=3.0.0-beta.7",
+    "@admin-bro/mongoose": "^1.0.0-beta.2",
+    "@admin-bro/koa": "^1.0.0-beta.2",
     "koa": "^2.13.0",
+    "@koa/router": "^9.3.1",
+    "koa2-formidable": "^1.0.2",
     "mongoose": "^5.9.27"
   }
 }
