--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -29,6 +29,117 @@ jobs:
         run: yarn lint
       - name: Build
         run: yarn build
+      - name: Upload Types
+        if: | 
+          contains(github.ref, 'refs/heads/next')
+          || contains(github.ref, 'refs/heads/master')
+          || contains(github.ref, 'refs/heads/next-major')
+          || contains(github.ref, 'refs/heads/beta')
+        uses: actions/upload-artifact@v1
+        with:
+          name: types
+          path: types
+      - name: Upload Build
+        if: | 
+          contains(github.ref, 'refs/heads/next')
+          || contains(github.ref, 'refs/heads/master')
+          || contains(github.ref, 'refs/heads/next-major')
+          || contains(github.ref, 'refs/heads/beta')
+        uses: actions/upload-artifact@v1
+        with:
+          name: build
+          path: build
+
+  cypress:
+    name: Cypress
+    needs: test
+    if: |
+      contains(github.ref, 'refs/heads/next')
+      || contains(github.ref, 'refs/heads/master')
+      || contains(github.ref, 'refs/heads/next-major')
+      || contains(github.ref, 'refs/heads/beta')
+    services:
+      mongo:
+        image: mongo:3.4.23
+        ports:
+          - 27017:27017
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Setup
+        uses: actions/setup-node@v1
+        with:
+          node-version: '10.x'
+      - name: Download Build
+        uses: actions/download-artifact@v1
+        with:
+          name: build
+      - name: Download Types
+        uses: actions/download-artifact@v1
+        with:
+          name: types
+      - run: yarn link
+      - name: Install dependencies
+        uses: cypress-io/github-action@v1
+        with:
+          # just perform install
+          runTests: false
+          working-directory: example-app
+      - run: yarn link @admin-bro/koa
+        working-directory: example-app
+      - uses: cypress-io/github-action@v1
+        with:
+          install: false
+          working-directory: example-app
+          start: yarn start
+      - uses: actions/upload-artifact@v1
+        if: failure()
+        with:
+          name: cypress-screenshots
+          path: example-app/cypress/screenshots
+      - uses: actions/upload-artifact@v1
+        if: always()
+        with:
+          name: cypress-videos
+          path: example-app/cypress/videos
+  
+  release:
+    name: Cypress
+    needs:
+      - test
+      - cypress
+    if: |
+      contains(github.ref, 'refs/heads/next')
+      || contains(github.ref, 'refs/heads/master')
+      || contains(github.ref, 'refs/heads/next-major')
+      || contains(github.ref, 'refs/heads/beta')
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Setup
+        uses: actions/setup-node@v1
+        with:
+          node-version: '10.x'
+      - name: Download Build
+        uses: actions/download-artifact@v1
+        with:
+          name: build
+      - name: Download Types
+        uses: actions/download-artifact@v1
+        with:
+          name: types
+      - uses: actions/cache@v1
+        id: yarn-cache
+        with:
+          path: node_modules
+          key: ${{ runner.os }}-node_modules-${{ hashFiles('**/yarn.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-node_modules-
+      - name: Install
+        if: steps.yarn-cache.outputs.cache-hit != 'true'
+        run: yarn install
       - name: Release
         env:
           SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
