--- a/example-app/package.json
+++ b/example-app/package.json
@@ -20,11 +20,12 @@
     "typescript": "^3.9.7"
   },
   "dependencies": {
-    "admin-bro": ">=3.0.0-beta.7",
-    "@admin-bro/mongoose": "^1.0.0-beta.2",
     "@admin-bro/koa": "^1.0.0-beta.2",
-    "koa": "^2.13.0",
+    "@admin-bro/mongoose": "^1.0.0-beta.2",
     "@koa/router": "^9.3.1",
+    "admin-bro": ">=3.0.0-beta.7",
+    "dotenv-json": "^1.0.0",
+    "koa": "^2.13.0",
     "koa2-formidable": "^1.0.2",
     "mongoose": "^5.9.27"
   }
