--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "release": "semantic-release",
     "build": "tsc",
-    "lint": "eslint './src/**/*' './example-app/**/*' --ignore-pattern '*.json' --ignore-pattern 'yarn.lock'"
+    "lint": "eslint './src/**/*' './example-app/**/*' --ignore-pattern '*.json' --ignore-pattern 'yarn*' --ignore-pattern 'build/**/*' --ignore-pattern 'yarn.lock'"
   },
   "husky": {
     "hooks": {
@@ -23,13 +23,14 @@
     "@types/koa": "^2.11.3",
     "@types/koa-bodyparser": "^4.3.0",
     "@types/koa-mount": "^4.0.0",
-    "@types/koa__router": "^8.0.2",
     "@types/koa-static": "^4.0.1",
+    "@types/koa__router": "^8.0.2",
     "@typescript-eslint/eslint-plugin": "^3.7.0",
     "@typescript-eslint/parser": "^3.7.0",
     "admin-bro": ">=3.0.0-beta.7",
     "eslint": "^7.5.0",
     "eslint-config-airbnb": "^18.2.0",
+    "eslint-plugin-cypress": "^2.11.1",
     "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-jsx-a11y": "^6.3.1",
     "eslint-plugin-react": "^7.20.3",
@@ -40,14 +41,14 @@
     "typescript": "^3.9.7"
   },
   "peerDependencies": {
-    "koa2-formidable": "^1.0.2",
-    "admin-bro": ">=3.0.0-beta.7",
     "@koa/router": "^9.3.1",
-    "koa": "^2.13.0"
+    "admin-bro": ">=3.0.0-beta.7",
+    "koa": "^2.13.0",
+    "koa2-formidable": "^1.0.2"
   },
   "dependencies": {
-    "koa-session": "^6.0.0",
     "koa-mount": "^4.0.0",
+    "koa-session": "^6.0.0",
     "koa-static": "^5.0.0"
   }
 }
