--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -153,6 +153,8 @@ jobs:
     if: failure()
     needs:
       - test
+      - cypress
+      - release
     steps:
       - uses: technote-space/workflow-conclusion-action@v1
       - uses: 8398a7/action-slack@v3
