ci: fix build cypress error

--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -71,6 +71,16 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: '10.x'
+      - uses: actions/cache@v1
+        id: yarn-cache
+        with:
+          path: node_modules
+          key: ${{ runner.os }}-node_modules-${{ hashFiles('**/yarn.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-node_modules-
+      - name: Install
+        if: steps.yarn-cache.outputs.cache-hit != 'true'
+        run: yarn install
       - name: Download Build
         uses: actions/download-artifact@v1
         with:
