--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -115,7 +115,7 @@ jobs:
           path: example-app/cypress/videos
   
   release:
-    name: Cypress
+    name: Release
     needs:
       - test
       - cypress
