--- a/example-app/tsconfig.json
+++ b/example-app/tsconfig.json
@@ -15,7 +15,7 @@
       "types": ["cypress"],
       "paths": {
         "react": ["node_modules/@types/react"],
-        "admin-bro": ["node_modules/admin-bro"],
+        "adminjs": ["node_modules/adminjs"],
       }
   },
   "include": [
