--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "@admin-bro/koa",
+  "name": "@adminjs/koa",
   "version": "1.1.1",
   "main": "build/index.js",
   "types": "types/index.d.ts",
   "private": false,
-  "repository": "git@github.com:SoftwareBrothers/admin-bro-koa.git",
+  "repository": "git@github.com:SoftwareBrothers/adminjs-koa.git",
   "license": "MIT",
   "scripts": {
     "release": "semantic-release",
@@ -28,7 +28,7 @@
     "@types/koa__router": "^8.0.2",
     "@typescript-eslint/eslint-plugin": "^3.7.0",
     "@typescript-eslint/parser": "^3.7.0",
-    "admin-bro": ">=3.0.0-beta.15",
+    "adminjs": ">=3.0.0-beta.15",
     "eslint": "^7.5.0",
     "eslint-config-airbnb": "^18.2.0",
     "eslint-plugin-cypress": "^2.11.1",
@@ -43,7 +43,7 @@
   },
   "peerDependencies": {
     "@koa/router": "^9.3.1",
-    "admin-bro": ">=3.0.0-beta.15",
+    "adminjs": ">=3.0.0-beta.15",
     "koa": "^2.13.0",
     "koa2-formidable": "^1.0.2"
   },
