chore: update adminjs package

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,7 @@
       "strictPropertyInitialization": true,
       "strictFunctionTypes": true,
       "strictBindCallApply": true,
+      "skipLibCheck": true,
       "noImplicitThis": true,
       "moduleResolution": "node",
       "module": "commonjs"
