--- a/example-app/package.json
+++ b/example-app/package.json
@@ -20,8 +20,8 @@
     "typescript": "^3.9.7"
   },
   "dependencies": {
-    "@adminjs/koa": "^1.0.0-beta.2",
-    "@adminjs/mongoose": "^1.0.0-beta.4",
+    "@adminjs/koa": "^2.0.0",
+    "@adminjs/mongoose": "^2.0.0",
     "@koa/router": "^9.3.1",
     "adminjs": ">=3.0.0-beta.15",
     "dotenv-json": "^1.0.0",
