--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@adminjs/koa",
-  "version": "2.0.0",
+  "version": "2.1.0",
   "main": "build/index.js",
   "types": "types/index.d.ts",
   "private": false,
@@ -25,6 +25,7 @@
     "@types/koa__router": "^8.0.2",
     "@types/koa-bodyparser": "^4.3.0",
     "@types/koa-mount": "^4.0.0",
+    "@types/koa-session": "^5.10.4",
     "@types/koa-static": "^4.0.1",
     "@typescript-eslint/eslint-plugin": "^3.7.0",
     "@typescript-eslint/parser": "^3.7.0",
