chore: rebrand AdminBro to AdminJS (#4)(@Andrianka @erkkah @dziraf)
This commit is a part of AdminBro to AdminJS rebranding process.

BREAKING CHANGE: AdminBro has been rebranded to AdminJS. All package and repository names had been updated.

1. Update your dependencies to use new `adminjs` packages.
- `admin-bro` -> `adminjs` for the core package
- `@admin-bro/<package name>` -> `@adminjs/<package name>` for other modules
2. Update your custom CSS classes:
- `.admin-bro_<component name>` -> `.adminjs_<component name>` (example: `.adminjs_Box`)
3. Search your project for `admin-bro` occurrences - most likely they will have to be updated to `adminjs`

--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Setup
         uses: actions/setup-node@v1
         with:
-          node-version: '10.x'
+          node-version: '14.x'
       - uses: actions/cache@v1
         id: yarn-cache
         with:
@@ -70,7 +70,7 @@ jobs:
       - name: Setup
         uses: actions/setup-node@v1
         with:
-          node-version: '10.x'
+          node-version: '14.x'
       - uses: actions/cache@v1
         id: yarn-cache
         with:
@@ -97,7 +97,7 @@ jobs:
           # just perform install
           runTests: false
           working-directory: example-app
-      - run: yarn link @admin-bro/koa
+      - run: yarn link @adminjs/koa
         working-directory: example-app
       - uses: cypress-io/github-action@v1
         with:
@@ -132,7 +132,7 @@ jobs:
       - name: Setup
         uses: actions/setup-node@v1
         with:
-          node-version: '10.x'
+          node-version: '14.x'
       - name: Download Build
         uses: actions/download-artifact@v1
         with:
