--- a/example-app/package.json
+++ b/example-app/package.json
@@ -20,10 +20,10 @@
     "typescript": "^3.9.7"
   },
   "dependencies": {
-    "@admin-bro/koa": "^1.0.0-beta.2",
-    "@admin-bro/mongoose": "^1.0.0-beta.4",
+    "@adminjs/koa": "^2.0.0",
+    "@adminjs/mongoose": "^2.0.0",
     "@koa/router": "^9.3.1",
-    "admin-bro": ">=3.0.0-beta.15",
+    "adminjs": ">=3.0.0-beta.15",
     "dotenv-json": "^1.0.0",
     "koa": "^2.13.0",
     "koa2-formidable": "^1.0.2",
