--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "@admin-bro/koa",
+  "name": "@adminjs/koa",
   "version": "1.1.1",
   "main": "build/index.js",
   "types": "types/index.d.ts",
   "private": false,
-  "repository": "git@github.com:SoftwareBrothers/admin-bro-koa.git",
+  "repository": "git@github.com:SoftwareBrothers/adminjs-koa.git",
   "license": "MIT",
   "scripts": {
     "release": "semantic-release",
@@ -18,17 +18,17 @@
     }
   },
   "devDependencies": {
-    "@commitlint/cli": "^8.3.5",
-    "@commitlint/config-conventional": "^8.3.4",
+    "@commitlint/cli": "^13.2.1",
+    "@commitlint/config-conventional": "^13.2.0",
     "@semantic-release/git": "^9.0.0",
     "@types/koa": "^2.11.3",
+    "@types/koa__router": "^8.0.2",
     "@types/koa-bodyparser": "^4.3.0",
     "@types/koa-mount": "^4.0.0",
     "@types/koa-static": "^4.0.1",
-    "@types/koa__router": "^8.0.2",
     "@typescript-eslint/eslint-plugin": "^3.7.0",
     "@typescript-eslint/parser": "^3.7.0",
-    "admin-bro": ">=3.0.0-beta.15",
+    "adminjs": "^5.0.0",
     "eslint": "^7.5.0",
     "eslint-config-airbnb": "^18.2.0",
     "eslint-plugin-cypress": "^2.11.1",
@@ -38,12 +38,12 @@
     "eslint-plugin-react-hooks": "^4.0.8",
     "husky": "^4.2.5",
     "semantic-release": "^17.0.7",
-    "semantic-release-slack-bot": "^1.6.2",
+    "semantic-release-slack-bot": "^2.1.1",
     "typescript": "^3.9.7"
   },
   "peerDependencies": {
     "@koa/router": "^9.3.1",
-    "admin-bro": ">=3.0.0-beta.15",
+    "adminjs": ">=5.0.0",
     "koa": "^2.13.0",
     "koa2-formidable": "^1.0.2"
   },
