--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@commitlint/cli": "^13.2.1",
     "@commitlint/config-conventional": "^13.2.0",
     "@semantic-release/git": "^9.0.0",
+    "@types/formidable": "^2.0.5",
     "@types/koa": "^2.11.3",
     "@types/koa-bodyparser": "^4.3.0",
     "@types/koa-mount": "^4.0.0",
