--- a/package.json
+++ b/package.json
@@ -1,8 +1,13 @@
 {
   "name": "@adminjs/koa",
   "version": "3.0.1",
-  "main": "build/index.js",
-  "types": "types/index.d.ts",
+  "type": "module",
+  "exports": {
+    ".": {
+      "import": "./build/index.js",
+      "types": "./types/index.d.ts"
+    }
+  },
   "private": false,
   "repository": "git@github.com:SoftwareBrothers/adminjs-koa.git",
   "license": "MIT",
@@ -41,7 +46,7 @@
     "husky": "^4.2.5",
     "semantic-release": "^17.0.7",
     "semantic-release-slack-bot": "^2.1.1",
-    "typescript": "^3.9.7"
+    "typescript": "^4.9.5"
   },
   "peerDependencies": {
     "@koa/router": "^9.3.1",
