--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,23 +1,20 @@
 {
   "compilerOptions": {
-      "outDir": "./build",
-      "target": "es2017",
-      "esModuleInterop": true,
-      "jsx": "react",
-      "declaration": true,
-      "declarationDir": "./types",
-      "strictNullChecks": true,
-      "strictPropertyInitialization": true,
-      "strictFunctionTypes": true,
-      "strictBindCallApply": true,
-      "skipLibCheck": true,
-      "noImplicitThis": true,
-      "moduleResolution": "node",
-      "module": "commonjs"
+    "outDir": "./build",
+    "target": "es2017",
+    "esModuleInterop": true,
+    "jsx": "react",
+    "declaration": true,
+    "declarationDir": "./types",
+    "strictNullChecks": true,
+    "strictPropertyInitialization": true,
+    "strictFunctionTypes": true,
+    "strictBindCallApply": true,
+    "skipLibCheck": true,
+    "noImplicitThis": true,
+    "moduleResolution": "nodenext",
+    "module": "nodenext",
+    "resolveJsonModule": true,
   },
-  "include": [
-      "./src/**/*",
-      "./spec/**/*",
-      "./index.d.ts"
-  ]
+  "include": ["./src/**/*", "./spec/**/*", "./index.d.ts"]
 }
