--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "@types/koa__router": "^12.0.0",
     "@typescript-eslint/eslint-plugin": "^5.56.0",
     "@typescript-eslint/parser": "^5.56.0",
-    "adminjs": "^6.0.0",
+    "adminjs": "^7.0.0-beta-v7.1",
     "eslint": "^8.36.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-plugin-import": "^2.27.5",
@@ -57,5 +57,8 @@
     "koa-mount": "^4.0.0",
     "koa-session": "^6.4.0",
     "koa-static": "^5.0.0"
+  },
+  "resolutions": {
+    "@types/koa": "^2.13.5"
   }
 }
