--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "@types/koa__router": "^12.0.0",
     "@typescript-eslint/eslint-plugin": "^5.56.0",
     "@typescript-eslint/parser": "^5.56.0",
-    "adminjs": "^7.0.0-beta-v7.1",
+    "adminjs": "^7.0.0",
     "eslint": "^8.36.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-plugin-import": "^2.27.5",
@@ -49,7 +49,7 @@
   },
   "peerDependencies": {
     "@koa/router": "^12.0.0",
-    "adminjs": ">=6.0.0",
+    "adminjs": "^7.0.0",
     "koa": "^2.14.1",
     "koa2-formidable": "^1.0.3"
   },
