--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "devDependencies": {
     "@commitlint/cli": "^17.4.4",
     "@commitlint/config-conventional": "^17.4.4",
+    "@koa/router": "^12.0.0",
     "@semantic-release/git": "^10.0.1",
     "@types/formidable": "^2.0.5",
     "@types/koa": "^2.13.5",
@@ -43,6 +44,8 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "husky": "^4.2.5",
+    "koa": "^2.14.2",
+    "koa2-formidable": "^1.0.3",
     "semantic-release": "^20.1.3",
     "semantic-release-slack-bot": "^4.0.0",
     "typescript": "^4.9.5"
@@ -54,6 +57,7 @@
     "koa2-formidable": "^1.0.3"
   },
   "dependencies": {
+    "formidable": "^2.1.1",
     "koa-mount": "^4.0.0",
     "koa-session": "^6.4.0",
     "koa-static": "^5.0.0"
